# ckb-plugin-ledger

./: .gitignore  CONTRIBUTING.md  Cargo.toml  ChangeLog.md  LICENSE  README.md  default.nix  shell.nix
schemas/: annotated.mol
src/: annotated.rs  handler.rs  keystore.rs  lib.rs  main.rs
src/keystore/: apdu.rs  error.rs  parse.rs
