[package]
name = "ckb-plugin-ledger"
version = "0.1.0"
license = "MIT"
authors = [ "Obsidian Systems LLC <maintainer@obsidian.systems>" ]
edition = "2018"
description = "CKB-CLI Plugin for Ledger"
readme = "README.md"
repository = "https://github.com/obsidiansystems/ckb-plugin-ledger/"

[dependencies]
# Same as ckb-cli
ckb-jsonrpc-types = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-hash = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-crypto = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec", features = ["secp"] }
ckb-build-info = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-types = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-util = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-resource = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-dao-utils = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }

ckb-sdk = { git = "https://github.com/obsidiansystems/ckb-cli", rev = "62c19585e2243e056aa01189bc8146ab479013e9" }
ckb-index = { git = "https://github.com/obsidiansystems/ckb-cli", rev = "62c19585e2243e056aa01189bc8146ab479013e9" }
ckb-cli-plugin-protocol = { git = "https://github.com/obsidiansystems/ckb-cli", rev = "62c19585e2243e056aa01189bc8146ab479013e9" }

ledger-apdu = { git = "https://github.com/obsidiansystems/ledger-rs", rev = "b7e27d51f76060f29cd0cc6a995e07b784aa5208"}
ledger-transport-hid = { git = "https://github.com/obsidiansystems/ledger-rs", rev = "b7e27d51f76060f29cd0cc6a995e07b784aa5208"}

bitflags = "1.2.1"
bitcoin_hashes = "0.3.2"
byteorder = "1.3.4"
dirs = "1.0.5"
either = "1.5.3"
failure = "0.1.5"
log = "0.4.6"
secp256k1 = {version = "0.17.0" }

serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.9"

[target.'cfg(unix)'.dependencies]
tui = "0.6.0"
termion = "1.5"

[build-dependencies]
ckb-build-info = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }