[package]
name = "ckb-plugin-ledger"
version = "0.2.0"
license = "MIT"
authors = [ "Obsidian Systems LLC <maintainer@obsidian.systems>" ]
edition = "2018"
description = "CKB-CLI Plugin for Ledger"
readme = "README.md"
repository = "https://github.com/obsidiansystems/ckb-plugin-ledger/"

[dependencies]
# Same as ckb-cli
ckb-jsonrpc-types = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-hash = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-crypto = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec", features = ["secp"] }
ckb-build-info = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-types = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-util = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-resource = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
ckb-dao-utils = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }

ckb-sdk = { git = "https://github.com/obsidiansystems/ckb-cli", rev = "74a53046eae364e41d8fe59216bb502d91453b6b" }
ckb-index = { git = "https://github.com/obsidiansystems/ckb-cli", rev = "74a53046eae364e41d8fe59216bb502d91453b6b" }
ckb-cli-plugin-protocol = { git = "https://github.com/obsidiansystems/ckb-cli", rev = "74a53046eae364e41d8fe59216bb502d91453b6b" }

ledger-apdu = { git = "https://github.com/obsidiansystems/ledger-rs", rev = "53498e1a9ac3e550601f5a846f63a209c4b12b42"}
ledger-transport-hid = { git = "https://github.com/obsidiansystems/ledger-rs", rev = "53498e1a9ac3e550601f5a846f63a209c4b12b42"}

bitflags = "1.2.1"
bitcoin_hashes = "0.3.2"
byteorder = "1.3.4"
dirs = "1.0.5"
either = "1.5.3"
env_logger = "0.6"
failure = "0.1.5"
log = "0.4.6"
secp256k1 = {version = "0.17.0" }

serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.9"

[target.'cfg(unix)'.dependencies]
tui = "0.6.0"
termion = "1.5"

[build-dependencies]
ckb-build-info = { git = "https://github.com/obsidiansystems/ckb", rev = "9c7c051777c06e540f68bb665277077c3ce8dbec" }
