[package]
name = "ckb-plugin-ledger"
version = "0.2.1"
license = "MIT"
authors = [ "Obsidian Systems LLC <maintainer@obsidian.systems>" ]
edition = "2018"
description = "CKB-CLI Plugin for Ledger"
readme = "README.md"
repository = "https://github.com/obsidiansystems/ckb-plugin-ledger/"

[dependencies]
# Same as ckb-cli
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.37.0-rc1" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.37.0-rc1" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.37.0-rc1", features = ["secp"] }
ckb-build-info = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.37.0-rc1" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.37.0-rc1" }
ckb-util = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.37.0-rc1" }
ckb-resource = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.37.0-rc1" }
ckb-dao-utils = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.37.0-rc1" }

ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli", rev = "babc52ae593474f7fddb80f7c229374203310d6a" }
ckb-index = { git = "https://github.com/nervosnetwork/ckb-cli", rev = "babc52ae593474f7fddb80f7c229374203310d6a" }
ckb-cli-plugin-protocol = { git = "https://github.com/nervosnetwork/ckb-cli", rev = "babc52ae593474f7fddb80f7c229374203310d6a" }
molecule = "=0.6.0"

ledger-apdu = { git = "https://github.com/obsidiansystems/ledger-rs", rev = "53498e1a9ac3e550601f5a846f63a209c4b12b42"}
ledger-transport-hid = { git = "https://github.com/obsidiansystems/ledger-rs", rev = "53498e1a9ac3e550601f5a846f63a209c4b12b42"}

bitflags = "1.2.1"
bitcoin_hashes = "0.3.2"
byteorder = "1.3.4"
dirs = "1.0.5"
either = "1.5.3"
env_logger = "0.6"
failure = "0.1.5"
log = "0.4.6"
secp256k1 = {version = "0.17.0" }

serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.9"

[target.'cfg(unix)'.dependencies]
tui = "0.6.0"
termion = "1.5"

[build-dependencies]
ckb-build-info = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.37.0-rc1" }
